<resources>
    <string name="app_name">HelloBean</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_start">Start Polling</string>
    <string name="action_stop">Stop Polling</string>
    <string name="action_ledoff">LED Off</string>
    <string name="action_ledon">LED On</string>
    <string name="action_inventory">Inventory</string>
    <string name="title_activity_monitor">Monitor</string>
    <string name="status_text">Status</string>
    <string name="action_monitor">Monitor</string>
    <string name="action_start_monitoring">Start Monitoring</string>
    <string name="action_stop_monitoring">Stop Monitoring</string>
</resources>
