<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.k1computing.hellobean.MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_start"
        android:title="@string/action_start"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_stop"
        android:title="@string/action_stop"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_ledoff"
        android:title="@string/action_ledoff"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_ledon"
        android:title="@string/action_ledon"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_inventory"
        android:title="@string/action_inventory"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_monitor"
        android:title="@string/action_monitor"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
